<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".NewCharactersFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_margin">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iconCharacter"
            android:layout_width="@dimen/circle_icon_size"
            android:layout_height="@dimen/circle_icon_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/default_small_margin"
            android:layout_marginStart="@dimen/default_small_margin"
            android:contentDescription="@string/character_icon"
            app:border_color="@color/grey_700"
            app:border_width="1dp"/>

        <EditText
            android:id="@+id/etName"
            style="@style/EditTextNewCharacter"
            android:layout_width="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_toLeftOf="@id/iconCharacter"
            android:layout_toStartOf="@id/iconCharacter"
            android:hint="@string/name"
            android:inputType="textNoSuggestions"/>

        <ImageView
            android:id="@+id/iconGameSystem"
            style="@style/IconNewCharacter"
            android:layout_below="@id/etName"
            android:contentDescription="@string/game_systems"
            android:src="@drawable/ic_list_grey600_24dp"/>

        <EditText
            android:id="@+id/etGameSystem"
            style="@style/EditTextNewCharacter"
            android:layout_below="@id/etName"
            android:hint="@string/game_system"/>

        <ImageView
            android:id="@+id/iconRace"
            style="@style/IconNewCharacter"
            android:layout_below="@id/etGameSystem"
            android:contentDescription="@string/character_race"
            android:src="@drawable/ic_list_grey600_24dp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etRace"
            style="@style/EditTextNewCharacter"
            android:layout_below="@+id/etGameSystem"
            android:hint="@string/character_race"/>

        <ImageView
            android:id="@+id/iconClass"
            style="@style/IconNewCharacter"
            android:layout_below="@id/etRace"
            android:contentDescription="@string/character_classes"
            android:src="@drawable/ic_list_grey600_24dp"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/etClass"
            style="@style/EditTextNewCharacter"
            android:layout_below="@+id/etRace"
            android:hint="@string/character_class"/>

        <ImageView
            android:id="@+id/iconTemplate"
            style="@style/IconNewCharacter"
            android:layout_below="@id/etClass"
            android:contentDescription="@string/templates"
            android:src="@drawable/ic_extension_grey600_24dp"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/etTemplate"
            style="@style/EditTextNewCharacter"
            android:layout_below="@id/etClass"
            android:focusable="false"
            android:hint="@string/template"/>

    </RelativeLayout>
</ScrollView>