<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".NewModuleFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_horizontal_margin">

        <TextView
            android:id="@+id/tvGameSystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/default_small_margin"
            android:layout_marginStart="@dimen/default_small_margin"/>

        <EditText
            android:id="@+id/etSearch"
            style="@style/EditTextNewCharacter"
            android:layout_width="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="0dp"
            android:layout_toLeftOf="@id/tvGameSystem"
            android:layout_toStartOf="@id/tvGameSystem"
            android:hint="@string/what_module_needed"
            android:inputType="textNoSuggestions"/>

        <!--Add card here when selected -->

        <ImageView
            android:id="@+id/iconChooseWidth"
            style="@style/IconNewCharacter"
            android:layout_below="@id/etSearch"
            android:contentDescription="@string/choose_width"
            android:src="@drawable/ic_choose_width_24dp"/>

        <EditText
            android:id="@+id/etChooseWidth"
            style="@style/EditTextNewCharacter"
            android:layout_below="@id/etSearch"
            android:focusable="false"
            android:hint="@string/width"
            android:inputType="number"/>

        <ImageView
            android:id="@+id/iconChooseColor"
            style="@style/IconNewCharacter"
            android:layout_below="@id/etChooseWidth"
            android:contentDescription="@string/choose_color"
            android:src="@drawable/ic_palette_grey600_24dp"/>

        <EditText
            android:id="@+id/etChooseColor"
            style="@style/EditTextNewCharacter"
            android:layout_below="@+id/etChooseWidth"
            android:hint="@string/color"/>

    </RelativeLayout>
</ScrollView>