<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    style="@style/Card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardBackgroundColor="@color/card_background"
    card_view:cardCornerRadius="@dimen/card_corner_radius">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextTitle"
            android:layout_marginTop="@dimen/default_large_margin"
            android:text="@string/health"/>

        <amagi82.modularcharactersheetcreator.widgets.RoundedStatBar
            android:id="@+id/statBar"
            style="@style/StatRatingBarTen"
            android:layout_below="@id/tvTitle"
            android:layout_margin="@dimen/default_margin"
            android:numStars="7"
            card_view:barType="healthbox"/>

        <TextView
            android:id="@+id/tvDamageLevel"
            style="@style/HealthModuleText"
            tools:text="Mauled"/>

        <TextView
            android:id="@+id/tvPenalty"
            style="@style/HealthModuleText"
            android:layout_alignParentRight="true"
            tools:text="-2 Dice"/>

        <View
            style="@style/Divider"
            android:layout_below="@id/tvDamageLevel"/>

        <ImageView
            android:id="@+id/bHealDamage"
            style="@style/HealthModuleIcon"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:contentDescription="@string/heal_damage"
            android:src="@drawable/ic_favorite_grey600_24dp"/>

        <ImageView
            android:id="@+id/bAddDamageAgg"
            style="@style/HealthModuleIcon"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/default_margin"
            android:contentDescription="@string/take_agg_damage"
            android:src="@drawable/ic_agg_claws"/>

        <ImageView
            android:id="@+id/bAddDamageLethal"
            style="@style/HealthModuleIcon"
            android:layout_toLeftOf="@id/bAddDamageAgg"
            android:contentDescription="@string/take_lethal_damage"
            android:src="@drawable/ic_lethal_axe"/>

        <ImageView
            android:id="@+id/bAddDamageBashing"
            style="@style/HealthModuleIcon"
            android:layout_toLeftOf="@id/bAddDamageLethal"
            android:contentDescription="@string/take_bashing_damage"
            android:src="@drawable/ic_bashing_punch"/>
    </RelativeLayout>
</android.support.v7.widget.CardView>