<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="healthViewModel"
                  type="amagi82.modularcharactersheetcreator.ui.sheet.modules.HealthViewModel"/>
    </data>
    <android.support.v7.widget.CardView
        style="@style/Card.Medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextTitle"
                android:layout_marginTop="@dimen/default_large_margin"
                android:text="@string/health"/>

            <amagi82.modularcharactersheetcreator.extras.widgets.RoundedStatBar
                style="@style/StatRatingBarTen"
                android:layout_below="@id/tvTitle"
                android:layout_margin="@dimen/default_margin"
                app:healthBar="@{healthViewModel.health}"/>

            <TextView
                android:id="@+id/tvDamageLevel"
                style="@style/HealthModuleText"
                android:text="@{healthViewModel.health.damageText}"
                tools:text="Mauled"/>

            <TextView
                style="@style/HealthModuleText"
                android:layout_alignParentRight="true"
                android:text="@{healthViewModel.health.damagePenalty}"
                tools:text="-2 Dice"/>

            <View
                style="@style/Divider"
                android:layout_below="@id/tvDamageLevel"/>

            <ImageView
                android:id="@+id/bHealDamage"
                style="@style/HealthModuleIcon"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:contentDescription="@string/heal_damage"
                android:onClick="onHeal"
                android:src="@drawable/ic_favorite_24dp"/>

            <ImageView
                android:id="@+id/bAddDamageAgg"
                style="@style/HealthModuleIcon"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/default_margin"
                android:contentDescription="@string/take_agg_damage"
                android:onClick="onDamageAgg"/>
                <!--android:src="@drawable/ic_agg_claws"/>-->

            <ImageView
                android:id="@+id/bAddDamageLethal"
                style="@style/HealthModuleIcon"
                android:layout_toLeftOf="@id/bAddDamageAgg"
                android:contentDescription="@string/take_lethal_damage"
                android:onClick="onDamageLethal"/>
                <!--android:src="@drawable/ic_lethal_axe"/>-->

            <ImageView
                style="@style/HealthModuleIcon"
                android:layout_toLeftOf="@id/bAddDamageLethal"
                android:contentDescription="@string/take_bashing_damage"
                android:onClick="onDamageBashing"/>
                <!--android:src="@drawable/ic_bashing_punch"/>-->
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</layout>