<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    style="@style/Card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    card_view:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout
        android:id="@+id/card_linear_layout"
        style="@style/LinearLayoutWodCardBlock">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextTitle"
            android:paddingBottom="@dimen/default_margin"
            android:text="@string/blood_pool"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/default_small_margin">

            <ImageView
                android:id="@+id/bBloodLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/spend_blood"
                android:src="@drawable/ic_chevron_left_grey600_48dp"/>

            <com.github.lzyzsd.circleprogress.CircleProgress
                android:id="@+id/circle_progress"
                android:layout_width="100dp"
                android:layout_height="100dp"
                card_view:circle_finished_color="@color/darkRed"
                card_view:circle_max="10"
                card_view:circle_progress="7"
                card_view:circle_suffix_text=""
                card_view:circle_text_size="@dimen/abc_text_size_display_1_material"/>

            <ImageView
                android:id="@+id/bBloodRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gain_blood"
                android:src="@drawable/ic_chevron_right_grey600_48dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvText"
            style="@style/TextBody"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_small_margin"
            tools:text="Blood Per Turn: 2"/>
    </LinearLayout>
</android.support.v7.widget.CardView>